<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:theme="@style/AppTheme.AppBarOverlay"
    app:elevation="0dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <TextView
            android:id="@+id/txt_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/news"/>

        <ImageView
            android:id="@+id/ic_toolbar_setting"
            style="@style/toolbar_right_style"
            android:visibility="gone"
            android:contentDescription="@null"
            android:src="@android:drawable/ic_menu_preferences"/>

        <ImageView
            android:id="@+id/ic_toolbar_refresh"
            style="@style/toolbar_left_style"
            android:contentDescription="@null"
            android:src="@android:drawable/stat_notify_sync"/>

    </androidx.appcompat.widget.Toolbar>

</com.google.android.material.appbar.AppBarLayout>