...
            app:layout_constraintBottom_toBottomOf="@+id/iv_news_item_image"
            app:layout_constraintLeft_toRightOf="@+id/iv_news_item_image"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_news_item_image">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                tools:text="news title ........... this is a sample text " />
...
