<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search_by_name"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView" />
</menu>
